@@ -1,3 +1,14 @@
+commit 1fdadaf30b387da28b1f80d338e84dc43aa2f672
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Tue Jan 5 20:38:39 2010 +0900
+
+    aufs: bugfix, an error path in au_new_inode()
+    
+    In the success path, call unlock_new_inode(). Otherwise call
+    iget_failed() without iput().
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit 4a46d05d5cf4b04b401a3f86a5a2bb3611a7c9aa
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Sun Jan 3 02:15:28 2010 +0900
